kubernetes/apps/flux-ui/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-ui
  namespace: flux-system
  annotations:
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - flux.shared.h.svenlito.com
  rules:
    - host: flux.shared.h.svenlito.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flux-operator
                port:
                  name: http-web
